# pt-BR_BKJ1611

./: main.py  pyproject.toml
data/: 00.json  01_1.json  01_11.json  01_14.json  01_15.json  01_23.json  01_25.json  01_28.json  01_29.json  01_3.json  01_31.json  01_32.json  01_34.json  01_35.json  01_37.json  01_38.json  01_42.json  01_43.json  01_44.json  01_45.json  01_47.json  01_48.json  01_49.json  01_5.json  01_50.json  01_6.json  01_8.json  01_9.json  02_1.json  02_10.json  02_15.json  02_16.json  02_18.json  02_19.json  02_22.json  02_24.json  02_25.json  02_26.json  02_27.json  02_29.json  (+1150 more)
pt_br_bkj1611/: __init__.py  __main__.py  functions.py
