[tool.poetry]
authors = ["William Sampaio <56176702+WilliamSampaio@users.noreply.github.com>"]
description = ""
name = "pt-br-bkj1611"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
python = "^3.12"
requests = "^2.32.3"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
